tests/v0_4/valid/step_multiple_targets.devops
target "server1" {
  address = "192.168.1.10"
}

target "server2" {
  address = "192.168.1.11"
}

// One step definition
step "install_package" {
  type = process.exec
  cmd  = ["apt-get", "install", "-y", "nginx"]
  cwd  = "/tmp"
}

// Used by multiple nodes
node "install_on_server1" {
  type = install_package
  targets = [server1]
}

node "install_on_server2" {
  type = install_package
  targets = [server2]
  depends_on = ["install_on_server1"]
}
